Refactor, add javadoc to CompactUri