@@ -15,8 +15,8 @@
  */
 package com.apicatalog.jsonld.lang;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public final class Keywords {
 
@@ -93,16 +93,14 @@ public final class Keywords {
 
     // Extension: JSON-LD-STAR (Experimental)
     public static final String ANNOTATION = "@annotation";
-    
-    private static final Collection<String> ALL_KEYWORDS = Arrays.asList(ANY, BASE, CONTAINER, CONTEXT, DIRECTION, GRAPH,
-            ID, IMPORT, INCLUDED, INDEX, JSON, LANGUAGE, LIST, NEST, NONE, PREFIX, PRESERVE, PROPAGATE, PROTECTED, REVERSE, SET,
-            TYPE, VALUE, VERSION, VOCAB,
+
+    private static final Collection<String> ALL_KEYWORDS = List.of(ANY, BASE, CONTAINER, CONTEXT,
+            DIRECTION, GRAPH, ID, IMPORT, INCLUDED, INDEX, JSON, LANGUAGE, LIST, NEST, NONE, PREFIX,
+            PRESERVE, PROPAGATE, PROTECTED, REVERSE, SET, TYPE, VALUE, VERSION, VOCAB,
             // framing
             DEFAULT, EMBED, ALWAYS, ONCE, NEVER, EXPLICIT, NULL, OMIT_DEFAULT, REQUIRE_ALL, MERGED,
             // star
-            ANNOTATION
-            );
-
+            ANNOTATION);
 
     protected Keywords() {
     }
@@ -125,7 +123,7 @@ public final class Keywords {
         }
 
         // vanilla approach is 3 times faster than stream.allMatch
-        for (int i=1; i < value.length(); i++) {
+        for (int i = 1; i < value.length(); i++) {
             if (!Character.isAlphabetic(value.charAt(i))) {
                 return false;
             }
